@@ -39,7 +39,7 @@ Todoyu::$CONFIG['TEMPLATE']		= array(
 );
 
 	// Bad tags which are encoded by the HtmlFilter
-Todoyu::$CONFIG['SECURITY']['badHtmlTags'] = array('script', 'noscript', 'iframe', 'frameset', 'a', 'div', 'input', 'textarea', 'select', 'form', 'base', 'object', 'param', 'embed', 'body', 'head', 'base', 'basefont', 'option', 'optgroup', 'meta', 'img');
+Todoyu::$CONFIG['SECURITY']['badHtmlTags'] = array('script', 'noscript', 'iframe', 'frameset',/* 'a',*/ 'div', 'input', 'textarea', 'select', 'form', 'base', 'object', 'param', 'embed', 'body', 'head', 'base', 'basefont', 'option', 'optgroup', 'meta', 'img');
 
 
 
